--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Volume Pyramid Calculator</title>
   <link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
   <div class="hero">
-    <h1 class="hero-title">Click Me!</h1>
-    <p class="hero-subtitle"><a href="github.com">Github</a></p>
+    <h1 class="hero-title">Click Me to find out a pyramid's volume!</h1>
+    <p class="hero-subtitle"><a href="https://github.com/Fizzify/volume-pyramid-calculator">Github</a></p>
   </div>
   <script src="script.js"></script>
 </body>
